--- a/languages/lua/courses.org
+++ b/languages/lua/courses.org
@@ -1,51 +1,4 @@
-- article: 2014 https://garry.blog/i-fell-out-of-love-with-lua/
-  - by Garry's mod creator
-  - syntax:
-    - use of ".." over "+"  for string concatenation
-    - use of "--" over "//" for comments
-    - use of "~=" over "!=" for inequality
-  - habits:
-    - arrays that start at 1, are not going to help future programmers
-  - missing features
-    - no unicode support
-    - no var++
-    - no var += 1
-    - no continute
-- love2d tutorials https://www.youtube.com/channel/UCcq3KOawHtjyN0ibjL4RzXQ
-- https://learnxinyminutes.com/docs/lua/
-- https://lua.programmingpedia.net/
-- http://lua-users.org/wiki/VarargTheSecondClassCitizen
-- Pico-8 Tutorial - Shmup
-  https://www.youtube.com/playlist?list=PLea8cjCua_P3Sfq4XJqNVbd1vsWnh7LZd
-* mpv
-- https://mpv.io/manual/master/#lua-scripting
-  https://mpv.io/manual/master/#list-of-input-commands
-- https://github.com/davidde/mpv-autosub
-- https://github.com/CounterPillow/mpv-quack
-* youtube chat
-- https://github.com/vincasmiliunas/lua-basic-oauth2
-- https://developers.google.com/youtube/v3/live/docs/liveBroadcasts/list
-- https://developers.google.com/youtube/v3/live/registering_an_application
-* Packaging
-- https://github.com/siffiejoe/lua-amalg/
-- https://gist.github.com/Penguinum/a251002ffd79ba9975a0aecbe8515b80
-* autocomplete
-** vscode
-- https://github.com/jalovatt/reaper-vs-code
-** emacs
-- stylesheet
-  https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html
-  https://orgmode.org/manual/Formula-syntax-for-Calc.html#Formula-syntax-for-Calc
-  http://ergoemacs.org/emacs/elisp_call_shell_command.html
-
-- http://p.hagelb.org/pnh-lua-completion.el.html
-  https://www.reddit.com/r/emacs/comments/4mmgny/best_practice_of_lua_programming_in_emacs/
-  "other autocompletion on emacs"
-- https://github.com/ptrv/company-lua/pull/6/files
-  "company-lua torch backend addition"
-- https://github.com/Lazzle/ZBS-REAPER-API-Gen/blob/master/zbs-reaper-api-gen.lua
-  "extract ZBS doc from reaper api"
-* Course: 2020 - Master Lua Programming and Create Amazing Games with LÖVE!
+* 20 | Master Lua Programming and Create Amazing Games with LÖVE!
 - https://www.udemy.com/course/lua-love/
 - source https://github.com/kyleschaub/udemy-love2d
 - Love2D for massive progression (camera) https://github.com/vrld/hump
